--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -15,6 +15,15 @@
     {% if URL %}
       <h2>API is at: &lt{{URL}}&gt.</h2>
     {% endif %}
+    <br />
+    <br />
+    {% if response %}
+      <h2>Response:</h2>
+      <p>{{response}}</p>
+    {% else %}
+      <h2>Repsonse: &lt<italic>None</italic>&gt</h2>
+    {% endif %}
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
