--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -14,56 +14,57 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid headerbar sticky-top">
     <div class="row">
       <div class="col">
         <h1>API Response Viewer</h1>
+      </div>
     </div>
   </div>
 
-  <div class="container">
-    <div class="col min-vh-70" style="background-color:honeydew">
-      {% if URL %}
-      <div class="row">
-        <div class="col">
-          <h2>API is at: &lt{{URL}}&gt.</h2>      
-        </div>
-      </div>
-      {% endif %}
-      <div class="row">
-        {% if source %}
-          <div class="col w-50">
-            <h2>Full Response ({{source | length}}):</h2>
-            {% for obj in source %}
-              <div>{{obj}}</div>
-            {% endfor %}
+    <div class="container">
+      <div class="col min-vh-70 main-page">
+        {% if URL %}
+          <div class="row">
+            <div class="col">
+              <h2>API is at: &lt{{URL}}&gt.</h2>
+            </div>
           </div>
-
-        {% if models %}
-        <div class="col w-30">
-          <h2>Models ({{models | length}}):</h2>
-          {% for obj in models %}
-            <div>{{obj}}</div>
-          {% endfor %}
-        </div>
         {% endif %}
+          <div class="row">
+            {% if source %}
+              <div class="col">
+                <h2>Full Response ({{source | length}}):</h2>
+                {% for obj in source %}
+                  <div class="content">{{obj}}</div>
+                {% endfor %}
+              </div>
 
-        {% else %}
-          <h2>Response: &lt<i>None</i>&gt</h2>
-        {% endif %}
+              {% if models %}
+                <div class="col">
+                  <h2>Models ({{models | length}}):</h2>
+                  {% for obj in models %}
+                    <div class="content">{{obj}}</div>
+                  {% endfor %}
+                </div>
+              {% endif %}
+
+            {% else %}
+              <h2>Response: &lt<i>None</i>&gt</h2>
+            {% endif %}
+          </div>
       </div>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
