--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -9,74 +9,82 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='home.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/home.css') }}">
   <title>API Response Viewer</title>
 </head>
 
 <body>
-  <div class="container-fluid headerbar sticky-top">
-    <div class="row">
-      <div class="col">
-        <h1>API Response Viewer</h1>
+  <nav class="container-fluid navbar headerbar sticky-top">
+    <a class="navbar-brand" href="{{url_for('home')}}">
+      <img id="navbar-icon" src="{{url_for('static', filename='assets/icons8-open-book-64.png')}}" />
+      Response Viewer
+    </a>
+    <a class="navbar-text {{'active' if request.path == '/home/'}}" href="{{url_for('home')}}">
+      Home
+    </a>
+    <a class="navbar-text" href="https://www.github.com/awallace689/requests">
+      GitHub
+    </a>
+  </nav>
+
+  <div class="container">
+    <div class="col main-page">
+      {% if URL %}
+        <div class="row">
+          <div class="col">
+            <h2>API is at: &lt{{URL}}&gt.</h2>
+          </div>
+        </div>
+      {% endif %}
+  
+      <div class="row">
+        {% if source %}
+          <div class="col">
+            <h3>Full Response {% if is_list %}({{source | length}}){% else %}(1){% endif %}:</h3>
+            {% if is_list %}
+              <div class="content rounded">
+                {% for obj in source %}
+                  <h5>({{ loop.index }})</h5>
+                  <div class="content-item">{{obj}}</div>
+                {% endfor %}
+              </div>
+            {% else %}
+              <div class="content rounded">{{source}}</div>
+            {% endif %}
+          </div>
+          {% if models %}
+            <div class="col">
+              <h3>Models ({{models | length}}):</h3>
+              <div class="content rounded">
+                {% for obj in models %}
+                  <h5>({{ loop.index }})</h5>
+                  <div class="content-item">{{obj}}</div>
+                {% endfor %}
+              </div>
+            </div>
+          {% endif %}
+
+        {% else %}
+          <h2>Response: &lt<i>None</i>&gt</h2>
+        {% endif %}
       </div>
+
     </div>
   </div>
 
-    <div class="container">
-      <div class="col main-page">
-        {% if URL %}
-          <div class="row">
-            <div class="col">
-              <h2>API is at: &lt{{URL}}&gt.</h2>
-            </div>
-          </div>
-        {% endif %}
-        
-        <div class="row">
-          
-          {% if source %}
-            <div class="col">
-              <h3>Full Response {% if is_list %}({{source | length}}){% else %}(1){% endif %}:</h3>
-              {% if is_list %}
-                <div class="content rounded">
-                  {% for obj in source %}
-                    <h5>({{ loop.index }})</h5>
-                    <div class="content-item">{{obj}}</div>
-                  {% endfor %}
-                </div>
-              {% else %}
-                <div class="content rounded">{{source}}</div>
-              {% endif %}
-            </div>
-            {% if models %}
-              <div class="col">
-                <h3>Models ({{models | length}}):</h3>
-                <div class="content rounded">
-                  {% for obj in models %}
-                    <h5>({{ loop.index }})</h5>
-                    <div class="content-item">{{obj}}</div>
-                  {% endfor %}
-                </div>
-              </div>
-            {% endif %}
+  <div class="container-fluid">
+    
+  </div>
 
-          {% else %}
-            <h2>Response: &lt<i>None</i>&gt</h2>
-          {% endif %}
-
-        </div>
-      </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
